crates/parser/src/tests/snapshots/kclvm_parser__tests__expr__named_literal_expr_2.snap
---
source: parser/src/tests/expr.rs
expression: "crate::tests::parsing_expr_string(\"True\")"
---
Node {
    node: NameConstantLit(
        NameConstantLit {
            value: True,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 4,
}

