crates/parser/src/tests/snapshots/kclvm_parser__tests__expr__primary_expr_3.snap
---
source: parser/src/tests/expr.rs
expression: "crate::tests::parsing_expr_string(r####\"{}.a\"####)"
---
Node {
    node: Selector(
        SelectorExpr {
            value: Node {
                node: Config(
                    ConfigExpr {
                        items: [],
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 2,
            },
            attr: Node {
                node: Identifier {
                    names: [
                        Node {
                            node: "a",
                            filename: "",
                            line: 1,
                            column: 3,
                            end_line: 1,
                            end_column: 4,
                        },
                    ],
                    pkgpath: "",
                    ctx: Load,
                },
                filename: "",
                line: 1,
                column: 3,
                end_line: 1,
                end_column: 4,
            },
            ctx: Load,
            has_question: false,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 4,
}
